# weid-rust-sample

./: .gitignore  Cargo.toml  README.md  examples.db
migrations/2020-05-13-105400_create_weids/: down.sql  up.sql
src/: main.rs  models.rs
weid-light-client/: Cargo.toml
weid-light-client/src/: lib.rs  weid_generator.rs  weid_rest_service.rs
